[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/race.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/main.gd" type="Script" id=2]
[ext_resource path="res://script/camera.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -312.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 958.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 958, 768 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport"]
current = true
script = ExtResource( 3 )

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 958, 768 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="race" parent="Viewports/ViewportContainer2/Viewport" instance=ExtResource( 1 )]

[node name="Camera" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport"]
current = true
script = ExtResource( 3 )

[node name="Params" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -305.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car_1" type="Panel" parent="Params"]
margin_right = 666.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.15

[node name="car_name" type="Label" parent="Params/car_1"]
margin_left = 32.0
margin_top = 25.0
margin_right = 256.0
margin_bottom = 57.0
text = "car name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car_speed" type="Label" parent="Params/car_1"]
margin_left = 32.0
margin_top = 57.0
margin_right = 256.0
margin_bottom = 89.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_lap" type="Label" parent="Params/car_1"]
margin_left = 32.0
margin_top = 89.0
margin_right = 256.0
margin_bottom = 121.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_lap" type="Label" parent="Params/car_1"]
margin_left = 32.0
margin_top = 121.0
margin_right = 256.0
margin_bottom = 153.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="ViewportContainer" parent="Params"]
margin_left = 670.0
margin_right = 1249.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Params/Minimap"]
size = Vector2( 579, 305 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera" type="Camera2D" parent="Params/Minimap/Viewport"]
current = true
zoom = Vector2( 15, 15 )

[node name="car_2" type="Panel" parent="Params"]
margin_left = 1253.0
margin_right = 1920.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.15

[node name="car_name" type="Label" parent="Params/car_2"]
margin_left = 32.0
margin_top = 25.0
margin_right = 256.0
margin_bottom = 57.0
text = "car name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car_speed" type="Label" parent="Params/car_2"]
margin_left = 32.0
margin_top = 57.0
margin_right = 256.0
margin_bottom = 89.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_lap" type="Label" parent="Params/car_2"]
margin_left = 32.0
margin_top = 89.0
margin_right = 256.0
margin_bottom = 121.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_lap" type="Label" parent="Params/car_2"]
margin_left = 32.0
margin_top = 121.0
margin_right = 256.0
margin_bottom = 153.0
text = "100 km / h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
